--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title></title>
 </head>
 <body>
-    <h1> casa</h1>
+    <h1>Casa</h1>
     
-    <p> Aqui estou mostrando com será a rotina da semana do dia 26/02 até 01/03</p>
+    <p> Isto é uma casa.</p>
     
     <img src="bara01.png" alt="logo do barão">
     <img src="BARAO2.jpg" alt="foto do Barão">
