--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title></title>
 </head>
 <body>
-    <h1>Casa</h1>
+    <h1>Sapato</h1>
     
-    <p> Isto é uma casa.</p>
+    <p> Isto é um sapato. Mais precisamente um salto.</p>
     
     <img src="bara01.png" alt="logo do barão">
     <img src="BARAO2.jpg" alt="foto do Barão">
