--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE"
+    <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <title></title>
 </head>
 <body>
     <h1>Sapato</h1>
     
     <p> Isto é um sapato. Mais precisamente um salto.</p>
+    <p> Seu criador é o designer Kermit Tesoro e o mesmo já fez designers para sapatos da cantora Lady Gaga.
+    </p>
     
-    <img src="bara01.png" alt="logo do barão">
+    <img src="biz024-23.jpg" alt="logo do barão">
     <img src="BARAO2.jpg" alt="foto do Barão">
     <img src="NEWTON1.jpg" alt="logo do Newton">
     <img src="NEWTON2.jpg" alt="foto do Newton">
