--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </ol>
     <h2> Para ver mais sobre o assunto:</h2>
-    <a href="https://www.rtp.pt/noticias/economia/kermit-tesoro-ofereceu-duas-criacoes-ao-museu-do-calcado_v1202363" target="_blank">Clique aqui</a>
+    <a href="https://www.rtp.pt/noticias/economia/kermit-tesoro-ofereceu-duas-criacoes-ao-museu-do-calcado_v1202363" target="_blank" color="black">Clique aqui</a>
 
 
 
@@ -29,7 +29,7 @@
 
 
     <h2>Veja o sapato mais confortável do mundo</h2>
-    <a href="pdf.html" target="_blank"  download="COINI.pdf" type="aplication/pdf">
+    <a href="pdf.html" target="_blank"  download="COINI.pdf" type="aplication/pdf" color="#black"   >
         Clique aqui
     </a>
     
