--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
-    <title></title>
+    <style>
+        body {
+            margin-top: 40px;
+            margin-left: 40px;
+            margin-bottom: 20px;
+            line-height: 20px;
+        }
+    </style>
+
+
+    <title>O sapato</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>O sapato em formato de polvo</h1>
@@ -14,19 +25,9 @@
     
     <img src="biz024-23.jpg" alt="logo do barão">
          
-
-
-
-
-
     </ol>
     <h2> Para ver mais sobre o assunto:</h2>
     <a href="https://www.rtp.pt/noticias/economia/kermit-tesoro-ofereceu-duas-criacoes-ao-museu-do-calcado_v1202363" target="_blank" color="black">Clique aqui</a>
-
-
-
-
-
 
     <h2>Veja o sapato mais confortável do mundo</h2>
     <a href="pdf.html" target="_blank"  download="COINI.pdf" type="aplication/pdf" color="#black"   >
