--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {
             margin-top: 40px;
-            margin-left: 40px;
+            margin-left: 20px;
+            margin-right: 20px;
             margin-bottom: 20px;
             line-height: 20px;
         }
