--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <style>
         body {
-            margin-top: 40px;
-            margin-left: 40px;
-            margin-right: 40px;
-            margin-bottom: 40px;
+            justify-content: center;
+            align-items: center;
             line-height: 20px;
         }
     </style>
