--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>O sapato em formato de polvo</h1>
+    <h1 class="destaque">O sapato em formato de polvo</h1>
     
-    <p> Esse sapato é um salto e seu criador é o designer Kermit Tesoro e o mesmo já fez designers para sapatos para cantoras como Lady Gaga e Madonna.
+    <p> Esse sapato é um salto e seu criador é o designer Kermit Tesoro e o mesmo já fez designs de sapatos para cantoras como Lady Gaga e Madonna.
     </p>
     
     <img src="biz024-23.jpg" alt="logo do barão">
