--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="destaque">O sapato em formato de polvo</h1>
+    <h1 class="título">O sapato em formato de polvo</h1>
     
     <p> Esse sapato é um salto e seu criador é o designer Kermit Tesoro e o mesmo já fez designs de sapatos para cantoras como Lady Gaga e Madonna.
     </p>
