--- a/pdf.html
+++ b/pdf.html
@@ -9,7 +9,8 @@
 <body>
     <h1>O sapato mais confortável do mundo</h1>
     
-    <p> Por incrível que pareça, há sim um sapato que, de acordo com pesquisas, é considerado o mais confortável do mundo.</p>
+    <p> id="paragrafo-destaque">Este parágrafo possui um ID específico e será estilizado com CSS.
+        Por incrível que pareça, há sim um sapato que, de acordo com pesquisas, é considerado o mais confortável do mundo.</p>
     <p> O ASICS GEL-NIMBUS 25 é um tênis de corrida que tem o objetivo de melhorar aterrissagens e amortecimento. O mesmo também contém tecnologia PureGEL, que não é visível do lado externo do calçado e está presente na entressola, sendo a causa das passadas mais leves.
     </p>
     <p>Para você saber como é o sapato citado, aqui está uma imagem dele:</p>
