--- a/pdf.html
+++ b/pdf.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
-    <title></title>
+    <title>lalala</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            justify-content: center;
+            align-items: center;
+            line-height: 20px;
+        }
+    </style>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>O sapato mais confortável do mundo</h1>
